# orjsonic

./: .gitignore  README.md  pyproject.toml
src/orjsonic/: __init__.py  orjsonic.py
test/: test_api.py  test_append_newline.py  test_bytes.py  test_canonical.py  test_circular.py  test_dataclass.py  test_datetime.py  test_default.py  test_dict.py  test_dumps.py  test_enum.py  test_error.py  test_fake.py  test_file.py  test_fixture.py  test_fragment.py  test_indent.py  test_issue221.py  test_issue331.py  test_jsonchecker.py  test_memory.py  test_non_str_keys.py  test_numpy.py  test_parsing.py  test_reentrant.py  test_roundtrip.py  test_sort_keys.py  test_subclass.py  test_transform.py  test_type.py  test_typeddict.py  test_ujson.py  test_uuid.py
tests/: test_basic.py
