[project]
name = "orjsonic"
version = "0.1.5"
description = "A fleixible and fast wrapper around orjson for custom JSON encoding/decoding"
readme = "README.md"
requires-python = ">=3.10"
license-files = ["LICENSE"]
authors = [{ name = "randomseed42", email = "randomseed42@protonmail.com" }]
keywords = ["json", "orjson", "custom", "encoding", "decoding"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Libraries",
]
dependencies = ["chardet", "numpy", "orjson", "pandas"]

[project.urls]
Homepage = "https://github.com/randomseed42/orjsonic"

[tool.pytest.ini_options]
pythonpath = ["src"]
